# WaveShare_7_esp32P4_CANBUS_read_VsCode_ESP-IDF

./: BrightnessControl.cpp  BrightnessControl.h  CMakeLists-OLD.txt  CMakeLists.txt  ControlHub.cpp  ControlHub.h  CustomDashboard.cpp  CustomDashboard.h  Diagnostics.cpp  Diagnostics.h  DragRaceMode.cpp  DragRaceMode.h  DynamicScreen.cpp  DynamicScreen.h  Launch.cpp  Launch.h  RadioManager.cpp  RadioManager.h  Screen1.cpp  Screen1.h  Screen2.cpp  Screen2.h  SpeedLimit.cpp  SpeedLimit.h  SpeedUnitControl.cpp  SpeedUnitControl.h  TorqueHorsepowerChart.cpp  TorqueHorsepowerChart.h  TurnSignals.cpp  TurnSignals.h  WeatherDisplay.cpp  WeatherDisplay.h  filelist.txt  globalVariables.cpp  globalVariables.h  idf_component.yml  main.cpp  partitions.csv  project.info  sdkconfig  (+61 more)
